--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
     <h1>Background Generator</h1>
     <input class="color1" type="color" value="#00ff00">
-    <input class="color2" type="color" value="#ff0000">
+    <input class="color2" type="color" value="#ff0000"><br>
+    <button>random</button>
     <h2>Current Background:</h2>
     <h3></h3>
 
